--- a/products.html
+++ b/products.html
@@ -19,6 +19,10 @@
     <!-- css -->
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- link for social icons-->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
 
@@ -152,7 +156,13 @@
     <div class="bg-light">
       <footer class="container">
         <div class="d-flex justify-content-around p-4 top-section">
-          <div class="social-handles w-50">Social Media Links here</div>
+          <div class="social-handles w-50"> 
+            <p class="social-text">Follow Us</p>
+            <br/>
+            <a href=""class="facebook-icon"><i class="fa-brands fa-facebook"></i></a>
+              <a href=""class="instagram-icon"><i class="fa-brands fa-instagram"></i></a>
+              <a href=""class="youtube-icon"><i class="fa-brands fa-youtube"></i></a>
+            </div>
           <div class="contact form w-50">
             <div class="display-6">Contact Us:</div>
   
