--- a/services.html
+++ b/services.html
@@ -52,17 +52,55 @@
     </nav>
 
 
+ 
+  <div class="container d-flex flex-column h-100 my-4">
+      <h1 class="display-4">Services</h1> <hr>
+     <div class="services-container bg-light p-4 rounded g-3 d-flex flex-column justify-content-around">
+      <div class="services my-4">
+        <h2 >After-Sale Services</h2>
+        <div class="services-items d-flex container justify-content-around">
+          <div class="card mb-2" style="width: 32rem;">
+            <img src="" class="card-img-top p-3" alt="Installation and Setup">
+            <div class="card-body">
+              <h5 class="card-title">Installation and Setup</h5> <hr>
+              <p class="card-text">Experienced technicians will handle the entire process, from start to finish, to ensure a smooth and hassle-free experience for your business and users.</p>
+              <a href="#" class="btn btn-primary">Learn more</a>
+            </div>
+          </div>
+          <div class="card mb-2" style="width: 32rem;">
+            <img src="" class="card-img-top p-3" alt="Maintenance and Repairs">
+            <div class="card-body">
+              <h5 class="card-title">Maintenance and Repairs</h5> <hr>
+              <p class="card-text">This comprehensive service covers all aspects of printer upkeep and troubleshooting, ensuring your printing device continues to function at its best. </p>
+              <a href="#" class="btn btn-primary">Learn more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+          <div class="services-middle my-4">
+            <div class="services-middle-items d-flex container justify-content-around">
+              <div class="card mb-2" style="width: 32rem;">
+                <img src="" class="card-img-top p-3" alt="Training">
+                <div class="card-body">
+                  <h5 class="card-title">Training</h5><hr>
+                  <p class="card-text">We offer guidance to ensure that your users get the most out of the printing equipment. This service is tailored to the specific needs of the users or business. </p>
+                  <a href="#" class="btn btn-primary">Learn more</a>
+                </div>
+              </div>
+              <div class="card mb-2" style="width: 32rem;">
+                <img src="images/print-manager-tool.png" class="card-img-top p-3" alt="Print Management Software">
+                <div class="card-body">
+                  <h5 class="card-title">Print Management Software</h5><hr>
+                  <p class="card-text">Empower team productivity, and secure customer data while cutting costs and waste.</p>
+                  <a href="#" class="btn btn-primary">Learn more</a>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    
 
-    <!--  boostrap CDN for js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- js -->
-    <script src="script.js"></script>
-
+   
   </div>
   <!-- footer -->
       <div class="bg-light">
@@ -103,6 +141,19 @@
     
         </footer>
       </div>
+
+
+       <!--  boostrap CDN for js -->
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- js -->
+  <script src="script.js"></script>
+
+
 
   </body>
 </html>
