I made some additions in the html and css file

--- a/index.html
+++ b/index.html
@@ -62,11 +62,19 @@
     </nav>
 
     <div class="container d-flex flex-column h-100">
-      <h1 class="display-3 text-center">Team3P Services</h1>
-     
+      <h1 class="display-3 text-center" style="font-size: 2rem;">Team3P Home Of <span style="color: #007BFF; font-family: 'Playfair Display', serif;">Quality Printers</span></h1>
 
       <!-- enter code here -->
     <div class="row my-4">
+      <div class ="d-flex"; style="font-size: 18px; color: #007BFF; font-family:'Playfair Display', serif;">
+        <p>
+          <ul>
+            <li>Instant Delivery</li>
+            <li>Guarantee Price</li>
+            <li>Best Service Team</li>
+      </ul>
+    </p>
+      </div>
       <div class="column">
         <img src="./images/HP DeskJet 2620 All-in-One Printer – Wireless.jpg" alt="Image of an Office" class="image"> 
         </div>
@@ -90,13 +98,7 @@
               <a href=""class="instagram-icon"><i class="fa-brands fa-instagram"></i></a>
               <a href=""class="youtube-icon"><i class="fa-brands fa-youtube"></i></a>
             </div>
-          <div class="social-handles w-50"> 
-            <p class="social-text">Follow Us</p>
-            <br/>
-            <a href=""class="facebook-icon"><i class="fa-brands fa-facebook"></i></a>
-              <a href=""class="instagram-icon"><i class="fa-brands fa-instagram"></i></a>
-              <a href=""class="youtube-icon"><i class="fa-brands fa-youtube"></i></a>
-            </div>
+         
           <div class="contact form w-50">
             <div class="display-6">Contact Us:</div>
   
