updated about us page

--- a/about-us.html
+++ b/about-us.html
@@ -96,16 +96,16 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="images/vic-1.jpg" class="card-img-top" alt="Team Member 2">
+                <img src="images/maria.jpeg" class="card-img-top" alt="Team Member 2">
                 <div class="card-body">
-                  <h5 class="card-title">Victoria Agadzi</h5>
+                  <h5 class="card-title">Maria Gyamfi</h5>
                   <p class="card-text">Team Member</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="images/Carol image.jpg" class="card-img-top" alt="Team Member 3">
+                <img src="images/carol.jpeg" class="card-img-top" alt="Team Member 3">
                 <div class="card-body">
                   <h5 class="card-title">Caroline Aryeetey</h5>
                   <p class="card-text">Team Member</p>
@@ -140,9 +140,9 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="images/Carol image.jpg" class="card-img-top" alt="Team Member 3">
+                <img src="images/angela-1.jpg" class="card-img-top" alt="Team Member 3">
                 <div class="card-body">
-                  <h5 class="card-title">Caroline Aryeetey</h5>
+                  <h5 class="card-title">Angela Amuzu</h5>
                   <p class="card-text">Team Member</p>
                 </div>
               </div>
