Edited home page adding choose us and linked get started button to contact us

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <div class="container d-flex flex-column h-100">
     <h1 class="display-3 text-center" style="font-size: 2rem;">Team3P Home Of <span
-        style="color: #007BFF;" class="fw-bolder">Quality Printers</span></h1>
+        style="color: #007BFF;" class="fw-bolder">Quality Print Solutions</span></h1>
 
     <!-- enter code here -->
     <div class="row my-4">
@@ -77,25 +77,32 @@
           <li>Guarantee Price</li>
           <li>Best Service Team</li>
         </ul>
-
       </div>
+      <hr>
       <div class="column">
         <p>Team3P provides Product Sales and after Sales Services to old and new clients. We offer sales of Printers,
           Toners, and Printer Parts. Our primary objective is to establish an online platform that offers a seamless
           shopping experience for customers seeking printer sales, accessories, and related services. The ecommerce
           website will serve as a one-stop destination for individuals and businesses looking to purchase high-quality
           printers and receive exceptional after-sale support.</p>
-
-        <button class="btn btn-primary read-more" data-bs-toggle="modal" daba-bs-target="#readMoreModal">Read
-          More</button>
       </div>
+
       <div class="column">
         <img src="./images/HP DeskJet 2620 All-in-One Printer – Wireless.jpg" alt="Image of an Office" class="image">
       </div>
       
     </div>
-
-
+      <hr>
+      <div class="container-fluid">
+        <h2>Why Choose Us?</h2>
+        <p class="lh-1"><b>1. Expert Technicians:</b> Our team comprises highly trained and experienced technicians who are familiar with all major printer brands and models.</p>
+        <p class="lh-sm"><b>2. Convenient Scheduling:</b> We offer flexible scheduling options to fit your busy lifestyle or business operations.</p>
+        <p class="lh-base"><b>3. Comprehensive Service:</b> From initial setup to ongoing support, we provide a complete solution for all your printer needs.</p>
+        <p class="lh-lg"><b>4. Satisfaction Guarantee:</b> We are committed to ensuring your complete satisfaction with our services. If you are not happy with any aspect of our service, we will make it right.</p> 
+      </div>
+      <div><button class="btn btn-primary read-more" data-bs-toggle="modal" daba-bs-target="#readMoreModal"><a class="nav-link" href="./product/contact-us.html">Get Started</a></button>
+      </div>
+      <hr>
 
     <!-- footer -->
     <div class="bg-light">
