Updated modal content for products page

--- a/products.html
+++ b/products.html
@@ -282,16 +282,16 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="pixma-staticBackdropLabel">WorkForce Pro Details</h1>
+                  <h1 class="modal-title fs-5" id="pixma-staticBackdropLabel">Canon Pixma Details</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container d-flex flex-column ">
                   <h3>Workflow Efficiency</h3><hr>
                   <ul>
-                    <li>Built-in functionalities like Wi-Fi, Wi-Fi Direct, and Gigabit Ethernet connectivity enhance overall office productivity.</li>
-                    <li>A smartphone-like touchscreen interface makes navigating the printer's features effortless.</li>
-                    <li>These printers offer high-yield ink cartridges, resulting in a significantly lower cost per page compared to color laser printers.</li>
-                    <li> utilize inkjet technology, which uses up to 80% less power than competing color lasers</li>
+                    <li>The Canon PIXMA TS3520 is a compact, versatile all-in-one printer that can handle a variety of printing tasks, including documents, photos, and more.</li>
+                    <li>It offers wireless connectivity, allowing you to print directly from your smartphone, tablet, or laptop without the need for cables.</li>
+                    <li>The printer uses a 2-cartridge ink system (black and color) and supports printing resolutions of up to 4800 x 1200 dpi for high-quality output.</li>
+                    <li>In addition to printing, the PIXMA TS3520 can also scan and copy documents, making it a practical choice for home or small office use.</li>
                   </ul>
                   <hr>
                   <p>Price: <b>$1999.00</b> with <em>Delivery and Installation</em></p>
@@ -381,16 +381,16 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="ink667-staticBackdropLabel">WorkForce Pro Details</h1>
+                  <h1 class="modal-title fs-5" id="ink667-staticBackdropLabel">HP 667XL Ink Catridge Details</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container d-flex flex-column ">
                   <h3>Workflow Efficiency</h3><hr>
                   <ul>
-                    <li>Built-in functionalities like Wi-Fi, Wi-Fi Direct, and Gigabit Ethernet connectivity enhance overall office productivity.</li>
-                    <li>A smartphone-like touchscreen interface makes navigating the printer's features effortless.</li>
-                    <li>These printers offer high-yield ink cartridges, resulting in a significantly lower cost per page compared to color laser printers.</li>
-                    <li> utilize inkjet technology, which uses up to 80% less power than competing color lasers</li>
+                    <li>The HP 667XL is a high-capacity ink cartridge designed for use with compatible HP printer models.</li>
+                    <li>It offers a page yield of up to 600 pages in black and 415 pages in color, helping to reduce the frequency of cartridge replacements.</li>
+                    <li>The 667XL cartridge uses HP's advanced ink formulation technology to deliver consistent, vibrant colors and sharp text.</li>
+                    <li>As a genuine HP ink cartridge, it is designed to work seamlessly with your HP printer, ensuring reliable performance and optimal results.</li>
                   </ul>
                   <hr>
                   <p>Price: <b>$1999.00</b> with <em>Delivery and Installation</em></p>
@@ -463,7 +463,7 @@
           <div class="card mb-2" style="width: 18rem;">
             <img src="./images/Brother Genuine Ink Cartridge.webp" class="card-img-top p-3" alt="Brother Genuine Ink Cart.">
             <div class="card-body">
-              <h5 class="card-title">Brother Genuine Ink Cart.</h5><hr>
+              <h5 class="card-title">Brother Genuine Ink Cartridges</h5><hr>
               <p class="card-text">Brother Genuine Ink Cartridges are ink cartridges specifically designed and manufactured by Brother for use in their printers.</p>
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#brother-staticBackdrop">
                 Read more
@@ -475,16 +475,16 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="brother-staticBackdropLabel">WorkForce Pro Details</h1>
+                  <h1 class="modal-title fs-5" id="brother-staticBackdropLabel">Brother Genuine Ink Cartridges Details</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container d-flex flex-column ">
                   <h3>Workflow Efficiency</h3><hr>
                   <ul>
-                    <li>Built-in functionalities like Wi-Fi, Wi-Fi Direct, and Gigabit Ethernet connectivity enhance overall office productivity.</li>
-                    <li>A smartphone-like touchscreen interface makes navigating the printer's features effortless.</li>
-                    <li>These printers offer high-yield ink cartridges, resulting in a significantly lower cost per page compared to color laser printers.</li>
-                    <li> utilize inkjet technology, which uses up to 80% less power than competing color lasers</li>
+                    <li>Brother Genuine Ink Cartridges are designed specifically for use with Brother printers, ensuring optimal performance and compatibility.</li>
+                    <li>These ink cartridges are available in a variety of colors, including black, cyan, magenta, and yellow, allowing you to print high-quality documents and images.</li>
+                    <li>The ink cartridges are engineered to deliver consistent, long-lasting results, with page yields that can help reduce the frequency of replacements.</li>
+                    <li>Using Brother Genuine Ink Cartridges can help maintain the quality and reliability of your Brother printer, as they are thoroughly tested to meet the manufacturer's strict standards.</li>
                   </ul>
                   <hr>
                   <p>Price: <b>$1999.00</b> with <em>Delivery and Installation</em></p>
@@ -569,16 +569,16 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="black-staticBackdropLabel">WorkForce Pro Details</h1>
+                  <h1 class="modal-title fs-5" id="black-staticBackdropLabel">Black Laser Printer Toner Details</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container d-flex flex-column ">
                   <h3>Workflow Efficiency</h3><hr>
                   <ul>
-                    <li>Built-in functionalities like Wi-Fi, Wi-Fi Direct, and Gigabit Ethernet connectivity enhance overall office productivity.</li>
-                    <li>A smartphone-like touchscreen interface makes navigating the printer's features effortless.</li>
-                    <li>These printers offer high-yield ink cartridges, resulting in a significantly lower cost per page compared to color laser printers.</li>
-                    <li> utilize inkjet technology, which uses up to 80% less power than competing color lasers</li>
+                    <li>Black laser printer toner is the powdery substance used in monochrome (black and white) laser printers to produce crisp, high-quality text and graphics on printed pages.</li>
+                    <li>Toner cartridges contain a reservoir of this black toner powder, which is electrostatically charged and then transferred to the printer's drum to be fused onto the paper.</li>
+                    <li>Using genuine or compatible black laser toner cartridges designed for your specific printer model ensures optimal print quality and page yield, helping to reduce printing costs over time.</li>
+                    <li>Proper maintenance, such as regularly replacing toner cartridges when they run low, is important for maintaining the performance and lifespan of your laser printer.</li>
                   </ul>
                   <hr>
                   <p>Price: <b>$1999.00</b> with <em>Delivery and Installation</em></p>
@@ -668,16 +668,16 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="foxin-staticBackdropLabel">WorkForce Pro Details</h1>
+                  <h1 class="modal-title fs-5" id="foxin-staticBackdropLabel">Product MU Foxin Details</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container d-flex flex-column ">
                   <h3>Workflow Efficiency</h3><hr>
                   <ul>
-                    <li>Built-in functionalities like Wi-Fi, Wi-Fi Direct, and Gigabit Ethernet connectivity enhance overall office productivity.</li>
-                    <li>A smartphone-like touchscreen interface makes navigating the printer's features effortless.</li>
-                    <li>These printers offer high-yield ink cartridges, resulting in a significantly lower cost per page compared to color laser printers.</li>
-                    <li> utilize inkjet technology, which uses up to 80% less power than competing color lasers</li>
+                    <li>The Product MU Foxin FTC 12A / Q2612A is a compatible laser toner cartridge designed as a replacement for the original HP Q2612A toner cartridge.</li>
+                    <li>This toner cartridge is engineered to work seamlessly with HP LaserJet 1010, 1012, 1015, 1018, 1020, 1022, 1022n, 3015, 3020, and 3030 printer models.</li>
+                    <li>With a page yield of approximately 2,000 pages, the Foxin FTC 12A toner cartridge offers a cost-effective alternative to the original HP version, helping to lower printing costs.</li>
+                    <li>The toner cartridge is made using high-quality components and undergoes rigorous testing to ensure consistent print quality and reliable performance, comparable to the OEM product.</li>
                   </ul>
                   <hr>
                   <p>Price: <b>$1999.00</b> with <em>Delivery and Installation</em></p>
@@ -763,16 +763,16 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="socket-staticBackdropLabel">WorkForce Pro Details</h1>
+                  <h1 class="modal-title fs-5" id="socket-staticBackdropLabel">Switch Socket Details</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container d-flex flex-column ">
                   <h3>Workflow Efficiency</h3><hr>
                   <ul>
-                    <li>Built-in functionalities like Wi-Fi, Wi-Fi Direct, and Gigabit Ethernet connectivity enhance overall office productivity.</li>
-                    <li>A smartphone-like touchscreen interface makes navigating the printer's features effortless.</li>
-                    <li>These printers offer high-yield ink cartridges, resulting in a significantly lower cost per page compared to color laser printers.</li>
-                    <li> utilize inkjet technology, which uses up to 80% less power than competing color lasers</li>
+                    <li>A switch socket for printers is an electrical outlet that includes an integrated on/off switch, allowing the user to conveniently power a printer or other printing device on and off from the same location.</li>
+                    <li>This type of specialized socket is commonly used to control the power supply to printers, scanners, or multifunction devices, making it easier to turn the equipment on and off without having to reach behind or under the device.</li>
+                    <li>The switch socket provides both the electrical outlet and the switching functionality in a single, space-saving wall-mounted unit, streamlining the setup and management of printing equipment.</li>
+                    <li>Some advanced switch sockets for printers may also include additional features like surge protection or USB charging ports to further enhance the capabilities and convenience for the printing setup.</li>
                   </ul>
                   <hr>
                   <p>Price: <b>$1999.00</b> with <em>Delivery and Installation</em></p>
@@ -857,16 +857,16 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="kit-staticBackdropLabel">WorkForce Pro Details</h1>
+                  <h1 class="modal-title fs-5" id="kit-staticBackdropLabel">Plate Kit Adapter 3D Details</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container d-flex flex-column ">
                   <h3>Workflow Efficiency</h3><hr>
                   <ul>
-                    <li>Built-in functionalities like Wi-Fi, Wi-Fi Direct, and Gigabit Ethernet connectivity enhance overall office productivity.</li>
-                    <li>A smartphone-like touchscreen interface makes navigating the printer's features effortless.</li>
-                    <li>These printers offer high-yield ink cartridges, resulting in a significantly lower cost per page compared to color laser printers.</li>
-                    <li> utilize inkjet technology, which uses up to 80% less power than competing color lasers</li>
+                    <li>A Plate Kit Adapter is an accessory used in 3D printing to provide a specialized build plate or print surface for the 3D printer.</li>
+                    <li>These adapters allow users to easily swap out the standard build plate with a variety of alternative surfaces, such as glass, metal, or specialized coatings, to optimize adhesion and print quality for different materials or techniques.</li>
+                    <li>The plate kit adapter typically connects directly to the 3D printer's print bed, providing a secure and level mounting point for the interchangeable build plates.</li>
+                    <li>Using a Plate Kit Adapter gives 3D printer operators more flexibility to customize their printing setup, experiment with different materials, and ensure consistent, high-quality results across a range of 3D printing projects.</li>
                   </ul>
                   <hr>
                   <p>Price: <b>$1999.00</b> with <em>Delivery and Installation</em></p>
